Style Informations part and fix problems with alignments.

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -8,6 +8,14 @@ div{
 	border: 1px solid blue;
 }
 
+h1{
+	font-size: 2.5rem;
+}
+
+h3{
+	font-size: 2rem;
+}
+
 header{
 	display: flex;
 	align-items: center;
@@ -40,6 +48,7 @@ header .container img {
 }
 
 header h1{
+	font-size: 1rem;
 	font-weight: bold;
 }
 
@@ -50,35 +59,40 @@ header span{
 
 .jumbotron{
 	display: flex;
-	padding-top: 4rem;
 	background-color: lightgrey;
 }
 
+.jumbotron.one{
+	padding-top: 4rem;
+}
+
+
 .jumbotron .container{
-	min-width: 60%;
+	width: 60%;
 	height: auto;
 	overflow: hidden;
-	margin: 2rem 1.5rem;
+	padding: 2rem 1.5rem;
 }
 
 .jumbotron .container img{
+	min-width: 100%;
 	max-width: 100%;
 	height: auto;
 	display: block;
 }
 
-.start {
+.side {
 	display: flex;
 	flex-direction: column;
-	align-items: center;
+	width: 40%;
+	align-items: flex-start;
 	justify-content: center;
-	margin: 2rem 2rem 2rem 0;
+	padding: 2rem 0;
 }
 
-.start h1{
-	font-size: 3rem;
-	text-align: center;
-	border: 1px solid red;
+.side .everyday{
+	width: 65%;
+	margin-left: 1rem;
 }
 
 button span{
@@ -86,15 +100,58 @@ button span{
 	margin: 0.5rem 0px;
 }
 
-.start p{
+.side p{
 	font-size: 2rem;
-	text-align: center;
 	padding: 2rem 0;
 }
 
-.start button{
+.side button{
 	width: 100%;
 	height: 4rem;
 	padding: 0.5rem 0;
 }
 
+.hurt h1{
+	margin-top: 2rem;
+	margin-bottom: 1.5rem;
+}
+
+.hurt p{
+	margin-bottom: 1.5rem;
+}
+
+.side.two{
+	justify-content: space-between;
+	align-items: flex-start;
+	width: 40%;
+}
+
+.infobox{
+	display: inline-flex;
+    width: 95%;
+    max-width: 95%; 
+	margin-bottom: 1rem;
+	margin-left: 1rem;
+}
+
+.infobox .container{
+	width: 35%;
+	height: auto;
+	overflow: hidden;
+	padding: 0;
+}
+
+.infobox .container img{
+	width: 100%
+	height: auto;
+	display: block;
+}
+
+.infobox .infos{
+	width: 65%;
+	margin-left: 1rem;
+}
+
+.infobox p, a{
+	font-size: 1.5rem;
+}
